--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body style="background-color: hsl(212, 45%, 89%)">
   <div class="para" style="width:230px;height:380px;background-color: white;border-radius:12px;margin-left:560px;margin-top: 90px;padding-top: 10px;padding-left:10px;"><!--This is for inserting Qr code-->
-    <img alt="qr code" src="./images/favicon-32x32.png" width="220px" height="220px" style="border-radius: 6px;"><!--This is Qr code-->
+    <img alt="qr code" src="./images/image-qr-code.png;width=220px;height=220px;" style="border-radius: 6px;"><!--This is Qr code-->
     <strong><div style="padding-top: 10px;padding-left:25px;padding-right:20px;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-size:15px;color:hsl(218, 44%, 22%)">Improve your front-end 
       skills by building projects</div></strong>
     <strong><div style="font-size:12px;padding-top: 10px;padding-left:25px;padding-right:20px;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;color:hsl(220, 15%, 55%)">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</div></strong>
